# tide-ui

./: .gitignore  README.md  REPORT.md  pyproject.toml
data/: README.md  agentdesk.ipynb  annotator.py  bb2points.py  bounding_box_annotation_viz.py  push_to_hub.py  screenshots.ipynb
evals/: README.md  eval_closed.py  eval_paligemma.py  utils.py
evals/general_clicking/: README.md  eval_paligemma.py  molmo.py  moondream.py  sonnet.py
evals/ui_specific_clicking/: README.md  molmo.py  moondream.py  sonnet.py  utils.py
inference/: batch.py  batch_inference_eg.py
inference/moondream/: inference.py
training/: README.md  config.yaml  train.py  utils.py
training/molmo/: README.md  train.py
training/moondream/: train.py
training/paligemma/: train.py
