[project]
name = "tide-ui"
version = "0.1.0"
description = "Data and tools to improve UI clicking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=3.0.2",
    "einops>=0.8.0",
    "huggingface-hub>=0.26.2",
    "mllm>=0.1.46",
    "torch==2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.6",
    "transformers>=4.46.1",
]
