[project]
name = "tide-ui"
version = "0.1.0"
description = "Data and tools to improve UI clicking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.1",
    "agentdesk>=0.2.112",
    "anthropic>=0.40.0",
    "bitsandbytes>=0.45.0",
    "datasets>=3.0.2",
    "einops>=0.8.0",
    "flash-attn>=2.7.2.post1",
    "gradio>=3.36.1",
    "huggingface-hub>=0.26.2",
    "opencv-python>=4.10.0.84",
    "orign>=0.1.11",
    "torch==2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.6",
    "transformers>=4.46.1",
    "wandb>=0.18.6",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
